--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,9 +1,34 @@
-<app-background></app-background>
+<div style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -2; pointer-events: none;">
+  <app-background></app-background>
+</div>
 <div style="position: relative; z-index: 10;">
     <div class="animate__animated animate__fadeInDown">
         <app-hero-section></app-hero-section>
     </div>
     <br>
     <br>
-    <app-introduction></app-introduction>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-introduction></app-introduction>
+    </div>
+    <br>
+    <br>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-categories></app-categories>
+    </div>
+    <br>
+    <br>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-home-games></app-home-games>
+    </div>
+    <br>
+    <br>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-characters-home></app-characters-home>
+    </div>
+    <br>
+    <br>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-home-footer></app-home-footer>
+    </div>
 </div>
+<app-stars-background></app-stars-background>
