--- a/src/app/components/pages/learning/learning.component.html
+++ b/src/app/components/pages/learning/learning.component.html
@@ -3,15 +3,15 @@
 <div class="background"><img src="images/learningZone/StarsBackground.png" alt="background"></div>
 
 <div class="main">
-    <div class="item">
+    <a class="item" [routerLink]="['/tomate-story']">
         <div class="linear-background"></div>
         <div class="item-background"></div>
         <img src="images/learningZone/tomate.png" alt="cover" class="item-image">
         <h3 class="item-text">
             Toma-Tomate !
         </h3>
-    </div>
-    <div class="item">
+    </a>
+    <div class="item" >
         <div class="linear-background"></div>
 
         <div class="item-background"></div>
@@ -20,7 +20,7 @@
             Anne la banane
         </h3>
     </div>
-    <div class="item">
+    <div class="item" [routerLink]="['/carotte-story']">
         <div class="linear-background"></div>
 
         <div class="item-background"></div>
