--- a/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.html
+++ b/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.html
@@ -2,8 +2,8 @@
 <div class="background"><img src="images/learningZone/stories/tomate/cover.png" alt="background"></div>
 <div class="cover-title">
     <h3 class="description">Il était une fois... une petite boule<br> rouge, joyeuse et juteuse</h3>
-    <!-- <h1 class="title">Toma Tomate !</h1> -->
-    <img class="title" src="images/learningZone/stories/tomate/title.png" alt="title">
+    <h1 class="title">Toma Tomate !</h1>
+    <!-- <img class="title" src="images/learningZone/stories/tomate/title.png" alt="title"> -->
 
     <button class="btn btn-primary" (click)="onDiscoverClick()">Discover</button>
 </div>
