--- a/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.css
+++ b/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.css
@@ -19,7 +19,7 @@ body {
 }
 
 .background {
-    background-color: red;
+    background-color: #FCEFC5;
     top: 0;
     left: 0;
     width: 100%;
@@ -33,9 +33,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* display: block; */
-    /* If you want to see the red background, try adding opacity: 0.8; or use a PNG with transparency */
-    /* opacity: 0.8; */
 }
 
 @keyframes coverTitleFadeIn {
@@ -72,9 +69,25 @@ body {
     font-weight: bold;
 }
 
-.title {
+/* .title {
     width: 633px;
     margin-bottom: 6px;
+} */
+
+.title{
+    color: #d12e1a;
+    text-shadow:
+        -4px -4px 0 #fff,
+         4px -4px 0 #fff,
+        -4px  4px 0 #fff,
+         4px  4px 0 #fff,
+         0px -4px 0 #fff,
+         0px  4px 0 #fff,
+        -4px  0px 0 #fff,
+         4px  0px 0 #fff;
+    font-size: 96px;
+    font-weight: bold;
+    font-family: "Baloo 2", sans-serif;
 }
 
 @keyframes infinitePulse {
@@ -769,14 +782,19 @@ body {
 }
 
 /* reposive */
-@media (max-width: 900px) {
-    .title {
-        width: 500px;
-    }
-}
 
-@media (max-width: 600px) {
-    .title {
-        width: 300px;
-    }
-}
+/* mobile */
+@media (max-width: 480px) {
+
+  }
+  
+  /* tablet */
+  @media (min-width: 481px) and (max-width: 768px) {
+
+  }
+  
+  /* laptob */
+  @media (min-width: 769px) {
+
+  }
+  
